--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-  align-items: flex-end;
+  align-items: flex-start;
   display: flex;
   margin: 0 auto;
   max-width: var(--size-max-width);
